--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "cors": "^2.8.1",
+    "eslint": "^3.17.1",
     "express": "^4.15.2",
     "express-cors": "0.0.3",
     "fs": "0.0.1-security",
     "knex": "^0.12.8",
     "md5": "^2.2.1",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "pg": "^6.1.4",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "eslint": "^3.17.1",
-    "mocha": "^3.2.0"
+    "request": "^2.81.0"
   },
   "bugs": {
     "url": "https://github.com/mlimberg/BYOBackend/issues"
